--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "dom.iterable",
       "esnext"
     ],
-    "allowJs": false,
+    "baseUrl": "src/",
+    "allowJs": true,
     "incremental": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
@@ -25,14 +26,20 @@
     "noUnusedParameters": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@pages/*": ["src/pages/*"],
+      "@hooks/*": ["src/hooks/*"]
+    }
   },
   "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx"
+    "src",
+    "./src/**/*.js",
+    "./src/**.js",
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "lib"
   ]
 }
