--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
     "@reduxjs/toolkit": "^1.6.1",
     "axios": "^0.21.4",
     "formik": "^2.2.9",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-redux": "^7.2.5",
     "redux-saga": "^1.1.3",
     "uuid": "^8.3.2",
@@ -24,31 +24,29 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.40",
-    "@types/react-dom": "^17.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.12.1",
-    "@typescript-eslint/parser": "^5.12.1",
-    "eslint": "8.11.0",
-    "ts-jest": "^27.1.3",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.6.2",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.1.3",
-    "@testing-library/user-event": "^12.8.3",
-    "redux-saga-test-plan": "^4.0.4",
     "@commitlint/cli": "^16.2.1",
     "@commitlint/config-conventional": "^13.1.0",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "^9.0.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/user-event": "^12.8.3",
     "@types/enzyme": "^3.10.11",
     "@types/jest": "^27.4.1",
+    "@types/node": "17.0.21",
+    "@types/react": "17.0.40",
+    "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.22",
     "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.12.1",
+    "@typescript-eslint/parser": "^5.12.1",
+    "babel-jest": "^27.5.1",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.6",
+    "eslint": "8.11.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^16.1.0",
+    "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.4",
@@ -58,11 +56,14 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-redux-saga": "^1.2.1",
     "husky": "^7.0.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.0",
+    "jest-svg-transformer": "^1.0.0",
     "lint-staged": "^12.3.4",
     "prettier": "^2.3.0",
+    "redux-saga-test-plan": "^4.0.4",
     "semantic-release": "^19.0.2",
-    "import-sort-cli": "^6.0.0",
-    "import-sort-parser-typescript": "^6.0.0",
-    "import-sort-style-module": "^6.0.0"
+    "ts-jest": "^26.0.0",
+    "typescript": "4.6.2"
   }
 }
