fix: solve relative paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,9 +28,10 @@
     "skipLibCheck": true,
     "strict": true,
     "paths": {
-      "@components/*": ["src/components/*"],
-      "@pages/*": ["src/pages/*"],
-      "@hooks/*": ["src/hooks/*"]
+      "@components/*": ["components/*"],
+      "@pages/*": ["pages/*"],
+      "@hooks/*": ["hooks/*"],
+      "@styles/*": ["styles/*"]
     }
   },
   "include": [
